
[package]
name = "mungos"
description = "MongoDB in rust, simplified."
version = "1.1.0"
edition = "2021"
authors = ["MoghTech"]
repository = "https://github.com/mbecker20/mungos"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
mongodb = "3.1"
envy = "0.4"
anyhow = "1.0"
futures = "0.3"