
[package]
name = "mungos"
description = "MongoDB in rust, simplified."
version = "3.2.2"
edition = "2021"
authors = ["MoghTech"]
repository = "https://github.com/mbecker20/mungos"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
urlencoding = "2.1"
futures = "0.3"
mongodb = "3.2"
anyhow = "1.0"
serde = "1.0"
envy = "0.4"